kubernetes/apps/cert-manager/cert-manager/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-metrics
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: cert-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9402
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-control-plane
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: cert-manager
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchName: acme-v02.api.letsencrypt.org
              - matchPattern: acme-v02.api.letsencrypt.org.*
              - matchName: api.cloudflare.com
              - matchPattern: api.cloudflare.com.*
    - toCIDR:
        - 1.1.1.1/32
        - 1.0.0.1/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: acme-v02.api.letsencrypt.org
        - matchName: api.cloudflare.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-cainjector-metrics
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: cainjector
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9402
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-cainjector-api
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: cainjector
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-webhook-metrics
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: webhook
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9402
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-webhook-api
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: webhook
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
